java11+自己配置